# MorningStar

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  info.cpp  info.h  main.cpp  morningstar.cpp  morningstar.h  nettime.cpp  nettime.h  note.cpp  note.h  randnum.cpp  randnum.h  settings.cpp  settings.h  timer.cpp  timer.h
MorningStar_Reliza/: CMakeCache.txt  CMakeLists.txt  MorningStar_Reliza  cmake_install.cmake  info.cpp  info.h  main.cpp  morningstar.cpp  morningstar.h  morningstar_resources.qrc  nettime.cpp  nettime.h  note.cpp  note.h  notemodel.cpp  notemodel.h  notetypedelegate.cpp  notetypedelegate.h  radio.cpp  radio.h  randnum.cpp  randnum.h  settings.cpp  settings.h  textanalysis.cpp  textanalysis.h  timer.cpp  timer.h
MorningStar_Reliza/.cmake/api/v1/reply/: cache-v2-498d04fa6fd440ddf877.json  cmakeFiles-v1-af09e68d2da000a4f4d4.json  codemodel-v2-54b16251445b62f610ef.json  index-2021-09-05T19-36-51-0797.json  target-MorningStar_Reliza-Release-62dad8893ca06886b6b3.json  target-MorningStar_Reliza_autogen-Release-35851ce7a63bdb2d2dab.json
MorningStar_Reliza/MorningStar_Reliza_autogen/: moc_predefs.h  mocs_compilation.cpp
MorningStar_Reliza/MorningStar_Reliza_autogen/EWIEGA46WW/: moc_info.cpp.d  moc_morningstar.cpp.d  moc_nettime.cpp.d  moc_note.cpp.d  moc_notemodel.cpp.d  moc_notetypedelegate.cpp.d  moc_radio.cpp.d  moc_randnum.cpp.d  moc_settings.cpp.d  moc_textanalysis.cpp.d  moc_timer.cpp.d
MorningStar_Reliza/MorningStar_Reliza_autogen/UALDYJC4H4/: moc_qnixienumber.cpp.d
MorningStar_Reliza/QNixieNumber/: qnixienumber.cpp  qnixienumber.h  qnixienumber_resource.qrc
MorningStar_Reliza/QNixieNumber/qnixienumber_resource/nixie_numbers/: n0  n1  n2  n3  n4  n5  n6  n7  n8  n9
MorningStar_Reliza/QNixieNumber/qnixienumber_resource/realnixie_numbers/: rn0  rn1  rn2  rn3  rn4  rn5  rn6  rn7  rn8  rn9
MorningStar_Reliza/morningstar_resource/documents/: tz_сities.json
MorningStar_Reliza/morningstar_resource/icons/: badge_icon  ball_icon  books_icon  bulb_icon  gift_icon  info_icon  key_icon  maple_icon  microphone_icon  monitor_icon  package_icon  save_icon  signal_icon  slider_icon  tada_icon  timer_icon
MorningStar_Reliza/morningstar_resource/icons/player/: pause_icon  play_icon  stop_icon
MorningStar_Zero/: CMakeLists.txt  info.cpp  main.cpp  morningstar.h  morningstar_resources.qrc  nettime.cpp  nettime.h  note.cpp  note.h  randnum.cpp  randnum.h  timer.h
MorningStar_Zero/morningstar_images/icons/: calendar_icon  door_icon  keyboard_icon  radio_icon  tool_icon  warning_icon
MorningStar_Zero/morningstar_images/images/: morningstar_splashscreen  zero_image
morningstar_images/icons/: apply_icon  ball_icon  clipboard_icon  clock_icon  door_icon  file_icon  info_icon  ms_icon  notebook_icon  phone_icon  satellite_icon  timer_icon  warning_icon  x_icon
packaging/rpm/: MorningStar_Zero.spec
